chore: ensure dev deps install and improve dev workflow

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
     "build": "pnpm -r build"
+  },
+  "devDependencies": {
+    "tsx": "^4.20.6"
   }
 }
