--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
@@ -29,7 +29,6 @@
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
     "vitest": "^2.1.1"
   }
