--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:worker": "pnpm --filter mcgfinances-worker dev",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
-    "build": "pnpm -r build"
+    "build": "pnpm -r build",
+    "postbuild": "rm -rf dist && mkdir -p dist && cp -R apps/web/dist/. dist/"
   },
   "devDependencies": {
     "tsx": "^4.20.6"
