build: copy prisma schema and reuse deps

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -20,9 +20,10 @@ RUN pnpm --filter mcgfinances-api exec prisma generate --schema prisma/schema.pr
 FROM base AS runner
 ENV NODE_ENV=production
 WORKDIR /app
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY apps/api/package.json ./apps/api/
-RUN pnpm install --filter mcgfinances-api... --prod
+COPY --from=deps /app/node_modules ./node_modules
 COPY --from=builder /app/apps/api/dist ./dist
+COPY apps/api/prisma ./prisma
+COPY apps/api/package.json ./package.json
+RUN pnpm --filter mcgfinances-api exec prisma generate --schema prisma/schema.prisma
 EXPOSE 4000
 CMD ["node", "dist/index.js"]
