build: run prisma generate during deps stage

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -7,7 +7,8 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/api/package.json apps/api/tsconfig.json ./apps/api/
 COPY apps/web/package.json ./apps/web/
 COPY apps/worker/package.json ./apps/worker/
-RUN pnpm install --filter mcgfinances-api...
+COPY apps/api/prisma ./apps/api/prisma
+RUN pnpm install --filter mcgfinances-api... && pnpm --filter mcgfinances-api exec prisma generate --schema apps/api/prisma/schema.prisma
 
 FROM base AS builder
 COPY --from=deps /app/node_modules ./node_modules
@@ -15,15 +16,12 @@ COPY --from=deps /app/apps ./apps
 COPY tsconfig.base.json ./
 COPY apps/api ./apps/api
 RUN pnpm --filter mcgfinances-api build
-RUN pnpm --filter mcgfinances-api exec prisma generate --schema prisma/schema.prisma
 
 FROM base AS runner
 ENV NODE_ENV=production
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=builder /app/apps/api/dist ./dist
-COPY apps/api/prisma ./prisma
 COPY apps/api/package.json ./package.json
-RUN pnpm --filter mcgfinances-api exec prisma generate --schema prisma/schema.prisma
 EXPOSE 4000
 CMD ["node", "dist/index.js"]
