--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -11,17 +11,16 @@ COPY apps/api/prisma ./apps/api/prisma
 RUN pnpm install --filter mcgfinances-api... && pnpm --filter mcgfinances-api prisma:generate
 
 FROM base AS builder
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=deps /app/apps ./apps
+COPY --from=deps /app ./
 COPY tsconfig.base.json ./
 COPY apps/api ./apps/api
 RUN pnpm --filter mcgfinances-api build
 
 FROM base AS runner
 ENV NODE_ENV=production
+WORKDIR /app
+COPY --from=deps /app ./
+COPY --from=builder /app/apps/api/dist ./apps/api/dist
 WORKDIR /app/apps/api
-COPY --from=deps /app/apps/api/node_modules ./node_modules
-COPY --from=builder /app/apps/api/dist ./dist
-COPY apps/api/package.json ./package.json
 EXPOSE 4000
 CMD ["node", "dist/index.js"]
